[tool.poetry]
name = "NeinBot"
version = "0.2.0"
description = ""
authors = ["DerDetleph"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.1"
python-dotenv = "^0.17.1"
youtube-dl = "^2021.5.16"
PyNaCl = "^1.4.0"
schedule = "^1.1.0"
pytz = "^2021.1"
aioschedule = "^0.5.2"
python-ian-utils = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
